--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -741,8 +741,89 @@ body .mb_100 {
 /* -------------------------------- 
  Navigation
 -------------------------------- */
+.navbar-nav {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px; }
 
-.navbar-after {
+.navbar-right .dropdown-menu {
+  right: auto;
+  left: -1px; }
+
+.navbar-brand {
+  height: auto; }
+
+@media (max-width: 450px) {
+  .navbar-brand {
+    max-width: 260px; } }
+
+.navbar-toggle {
+  background: #D30015;
+  margin-top: 25px; }
+  .navbar-toggle .icon-bar {
+    background-color: #fff; }
+
+.navbar-white {
+  background: #fff;
+  border: none;
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3); }
+
+.navbar-kawsa .nav-btn-wrap {
+  max-height: 36px;
+  margin-top: 21px; }
+  .navbar-kawsa .nav-btn-wrap:after {
+    content: '';
+    display: table;
+    width: 100%; }
+
+@media (max-width: 767px) {
+  .navbar-kawsa .nav-btn-wrap {
+    display: none; } }
+
+.navbar-nav-hov_underline .navbar-nav li.active a {
+  background: transparent;
+  border-bottom: 4px solid #D30015; }
+
+@media (max-width: 767px) {
+  .navbar-nav-hov_underline .navbar-nav li.active a {
+    border-bottom-width: 2px; } }
+
+.navbar-nav-hov_underline .navbar-nav li a {
+  border-bottom: 4px solid transparent;
+  color: #000; }
+  .navbar-nav-hov_underline .navbar-nav li a:hover, .navbar-nav-hov_underline .navbar-nav li a:focus {
+    background: transparent;
+    border-bottom: 4px solid #D30015; }
+
+.navbar-nav-hov_underline .navbar-nav .dropdown-menu {
+  font-size: inherit;
+  border-radius: 0;
+  padding: 0;
+  border: 0;
+  min-width: 210px; }
+  .navbar-nav-hov_underline .navbar-nav .dropdown-menu:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    width: 100%;
+    height: 5px;
+    background-color: #D30015; }
+  @media (max-width: 767px) {
+    .navbar-nav-hov_underline .navbar-nav .dropdown-menu:before {
+      display: none; } }
+  .navbar-nav-hov_underline .navbar-nav .dropdown-menu li a {
+    padding: 10px 15px;
+    border-bottom: 1px solid #eef0f1; }
+    .navbar-nav-hov_underline .navbar-nav .dropdown-menu li a:hover {
+      color: #D30015; }
+  .navbar-nav-hov_underline .navbar-nav .dropdown-menu li.active a {
+    color: #D30015; }
+
+@media (max-width: 767px) {
+  .navbar-nav {
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.24);
+    margin-bottom: 3px; } }
+
+/* .navbar-after {
   color: #0f2439;
 }
 
@@ -766,19 +847,20 @@ body .mb_100 {
 
 @media (max-width: 450px) {
   .navbar-brand {
-    max-width: 260px; } }
+    max-width: 260px; } } */
 
-.navbar-toggle {
+/* .navbar-toggle {
   background: #D30015;
-  margin-top: 25px; }
-  .navbar-toggle .icon-bar {
-    background-color: rgb(10, 1, 1); }
+  margin-top: 25px; } */
+  /* .navbar-toggle .icon-bar {
+    background-color: rgb(10, 1, 1); 
+  } */
 
-.navbar-white {
+/* .navbar-white {
 
-  background: none;
+  background: #fff;
   border: none;
-  box-shadow: none }
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3); }
 
 .navbar-kawsa .nav-btn-wrap {
   padding-right: 10%;
@@ -807,8 +889,8 @@ body .mb_100 {
   color: #fff; }
   .navbar-nav-hov_underline .navbar-nav li a:hover, .navbar-nav-hov_underline .navbar-nav li a:focus {
     background: transparent;
-    border-bottom: 4px solid rgb(233, 10, 10); }
-
+    border-bottom: 4px solid rgb(233, 10, 10); } */
+/* 
 .navbar-nav-hov_underline .navbar-nav .dropdown-menu {
   font-size: inherit;
   border-radius: 0;
@@ -832,12 +914,12 @@ body .mb_100 {
     .navbar-nav-hov_underline .navbar-nav .dropdown-menu li a:hover {
       color: #e5eef7; }
   .navbar-nav-hov_underline .navbar-nav .dropdown-menu li.active a {
-    color: #D30015; }
-
+    color: #D30015; } */
+/* 
 @media (max-width: 767px) {
   .navbar-nav {
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.24);
-    margin-bottom: 3px; } }
+    margin-bottom: 3px; } } */
 
 /* slider navigation */
 
