modified:   assets/css/style.css 	new file:   assets/img/HPI_new.gif 	new file:   assets/img/blackBanner.png 	new file:   assets/img/slider/events_hd_450px.jpg 	new file:   assets/img/slider/events_hd_new450px.jpg 	new file:   assets/img/whiteBanner_v3.png 	modified:   events.html 	modified:   events_single.html 	modified:   future_member.html 	modified:   index.html 	modified:   lab_conf-talk.html 	modified:   lab_events.html 	modified:   lab_journal.html 	modified:   lab_research.html 	modified:   ourteam.html 	modified:   people.html 	modified:   professor.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1168,7 +1168,7 @@ body .mb_100 {
       transform: translateY(-50%); }
 
   .sabbi-page-header-classic2 {
-    background-image: url(../img/slider/mygraph.svg);
+    background-image: url(../img/slider/events_hd.jpg);
     background-position-x: center; 
     background-position-y: center; 
     background-repeat: no-repeat;
