--- a/pages/news/news.css
+++ b/pages/news/news.css
@@ -164,3 +164,12 @@ svg {
   /* color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
 }
+
+.box{ 
+  width: 335px; 
+  height: 300px; 
+  } 
+img{ 
+  width: 100%; 
+  height: 100%; 
+  } 
