--- a/pages/news/news.css
+++ b/pages/news/news.css
@@ -165,11 +165,48 @@ svg {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
 }
 
-.box{ 
-  width: 335px; 
-  height: 300px; 
-  } 
-img{ 
-  width: 100%; 
-  height: 100%; 
-  } 
+.box {
+  width: 335px;
+  height: 300px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+.flex-col {
+  flex: 1;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.flex-row {
+  display: flex;
+}
+
+/* NEWS cards */
+.news-item {
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.news-item:hover {
+  border-color: #e66767!important;
+}
+
+.news-item .header {
+  font-size: 130%;
+  font-weight: 700;
+}
+
+.news-item .desc {
+  font-size: 100%;
+  font-weight: 400;
+  color: #909090;
+  margin-top: 10px;
+}
+
+.col-header {
+  color: #2f2f2f;
+}
