--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2420,11 +2420,11 @@ a.link-with-icon i.fa {
 
 /* Custom Button in this absolute mess of CSS */
 .navbar-button {
-  font-weight: 500;
+  font-weight: 500!important;
   cursor: pointer;
-  transition: all 0.25s;
-  color: #d30015;
-  border: solid 1px #d30015;
+  transition: all 0.25s!important;
+  color: #d30015!important;
+  border: solid 1px #d30015!important;
   border-radius: 5px!important;
   margin-left: 15px!important;
   font-family: 'Montserrat', sans-serif!important;
@@ -2432,5 +2432,5 @@ a.link-with-icon i.fa {
 
 .navbar-button:hover {
   background: #d30015!important;
-  color: white;
+  color: white!important;
 }
