--- a/pages/news-template/news-template.css
+++ b/pages/news-template/news-template.css
@@ -18,7 +18,8 @@
   font-size: 130%;
   color: #333;
   font-weight: 500;
-  margin: 30px 0;
+  margin-top: 50px;
+  margin-bottom: 30px;
   font-family: 'Montserrat', sans-serif!important;
   line-height: 205%;
 }
