Added 3 more pages

--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 ">
-                    <div class="powredby">Developed and Managed by:
+                    <div class="powredby">Developed and managed by:
                         <a href="ourteam.html">Kaundal Research Group</a>
                     </div>
                 </div>
