--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header() }}
+{{ header("home") }}
 
 <body class="auth-theme-rashmore">
     <header class="sabbi-site-head">
