--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -1,6 +1,6 @@
 {% from "universal/navbar-active-route.njk" import activeRoute, activeSubroute %}
 
-{% macro navbar(activePage="") %}
+{% macro navbar(activePage="", activeSubpage="") %}
 
 <nav class="navbar navbar-white navbar-kawsa navbar-fixed-top">
 <article class="container">
@@ -54,17 +54,18 @@
                 </ul>
             </li>
             <li class="dropdown {{ activeRoute('People', activePage) }}">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" title="People" data-hover="dropdown" data-animations="zoomIn">People
-                    <span class="caret"></span></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/people" title="People" data-hover="dropdown" data-animations="zoomIn">People
+                    <span class="caret"></span>
+                </a>
                 <ul class="dropdown-menu" role="menu">
-                    <li>
-                        <a href="professor.html" title="Dr Rushmore">Dr. Rakesh Kaundal</a>
+                    <li class="{{ activeSubroute('Dr. Rakesh Kaundal', activeSubpage) }}">
+                        <a href="/people/rakesh" title="Dr Rakesh Kaundal">Dr. Rakesh Kaundal</a>
                     </li>
-                    <li class="active">
-                        <a href="ourteam.html" title="Our Team">Our Team</a>
+                    <li class="{{ activeSubroute('Our Team', activeSubpage) }}">
+                        <a href="/people/our-team" title="Our Team">Our Team</a>
                     </li>
-                    <li class="">
-                        <a href="alumni.html" title="Our Team">Alumni</a>
+                    <li class="{{ activeSubroute('Alumni', activeSubpage) }}">
+                        <a href="/people/alumni" title="Alumni">Alumni</a>
                     </li>
                 </ul>
             </li>
