Fixed terrible grammar

--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -34,8 +34,8 @@
               <div class="col-sm-8">
                   <p class="future_member-text" style="text-align: justify;">
                       If you would like to join us, we are always looking for <b>independently-funded research fellows</b> or
-                      <b>extended visitors</b>. Please use the <a href="#enroll"><u>form</u></a> below to exlpore the possible options.
-                      <b>Summer student</b> postions are also available for up to 3 - 4 months period.
+                      <b>extended visitors</b>. Please use the <a href="#enroll"><u>form</u></a> below to explore our options.
+                      <b>Summer student</b> positions are also available for up to a 3 - 4 month period.
 
                   </p>
                   <p class="future_member-text" style="text-align: justify;">A number of research projects are available within  the  general  areas  of
@@ -47,54 +47,55 @@
                   <figure class="future_member-figure">
                       <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-responsive">
                   </figure>
-                  <h2 class="font-md__x stage-vrb-title">Masters and Honours</h2>
-                  <p class="future_member-text" style="text-align: justify;">The students are required to have a good understanding of
+                  <h2 class="font-md__x stage-vrb-title">Masters and Honors</h2>
+                  <p class="future_member-text" style="text-align: justify;">Students are required to have a good understanding of
                                           biomolecular sciences and computer programming
-                                          – with experience in the field of Supervised  learning  (Artificial Intelligence)  and
-                                           Unsupervised learning (Bayesian-based methods) a distinct advantage.
-                                          He/She will need to demonstrate adaptability to the <i>multidisciplinary</i> nature of the projects. Masters and Honours students are
-                                          encouraged to <a href="#enroll"><u>contact</u></a> Dr. Kaundal to express his/her interest.
+                                          as well as experience in supervised learning and
+                                           unsupervised learning (Bayesian-based).
+                                          Students will need to demonstrate adaptability to the multidisciplinary nature of our projects. Masters and honors students are
+                                          encouraged to <a href="#enroll"><u>contact</u></a> Dr. Kaundal to express interest.
                                           <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/">Department of Computer Science</a>
                                               or <a target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils & Climate</a> are available.</b></p>
                   <div class="__fm_seg" id="join_reaserch_ln">
                       <figure class="future_member-figure">
                           <img src="assets/img/colorful.JPG"  alt="" class="img-responsive">
                       </figure>
-                     <h2 class="font-md__x stage-vrb-title">Ph.D.</h2>
+                     <h2 class="font-md__x stage-vrb-title">PhD</h2>
                      <p style="text-align: justify;">PhD opportunities with government and university-funded scholarships are available each year,
                                                       both to domestic and international students. Knowledge or experience in using scripting languages (Perl, Python) and
-                                                      statistical/mathematical toolkits (e.g. R, Matlab) with some kind of programming experience in
-                                                      any of the languages (C / C++ / Java) is highly desirable.
+                                                      statistical/mathematical toolkits (R, Matlab) with some kind of programming experience in
+                                                      any C, C++, or Java is preferable.
                                                       <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/">Department of Computer Science</a>
                                                           or <a target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils & Climate</a> are available.</b>
                                                   </p>
 
                      <h3 class="__fm_title" >Key criteria</h3>
-                     <p style="text-align: justify;"><strong >Domestic students</strong> – The students should have strong academic track record
+                     <p style="text-align: justify;"><strong >Domestic students</strong> – Students should have strong academic track record
                                                           (including research and write-up) with first class honours.
                                                           The student’s research and academic background might be in one or
                                                           more of biological sciences (plant/animal),
                                                           mathematics, statistics, computer science, data analytics, biological engineering
                                                           and related life science disciplines.</p>
                      <p style="text-align: justify;" class="future_member-text" ><strong>International students</strong> –
-                                                          For an international student, s/he is expected to have masters and honours
-                                                          degrees with very strong academic and research background in a relevant field.
-                                                          The students are likely to have an overall IELTS score of 6.0 or above with a
-                                                          minimum of 5 score in each band, or TOEFL with a minimum score of 79 (internet-based test).
+                                                          International students are expected to have masters and honours
+                                                          degrees with a strong academic and research background in a relevant field.
+                                                          An overall IELTS score of 6.0+ with a
+                                                          minimum score of 5 in each band is preferable. This can be subtituted with a TOEFL
+                                                          score of 79+.
                                                           For more details on eligibility, please visit the USU graduate school <a target="_blank" href="https://gradschool.usu.edu/apply/">website</a>. </p>
                   </div>
                   <div class="__fm_seg">
                      <h2 class="font-md__x stage-vrb-title">Postdoctoral Research Fellow</h2>
                      <p style="text-align: justify;">A postdoctoral research fellow with strong research and publication records in the area
                                                       of bioinformatics and computational biology is encouraged to
-                                                      directly contact <a href="professor.html">Dr. Kaundal</a> to express his/her interest.</p>
+                                                      directly contact <a href="professor.html">Dr. Kaundal</a> to express interest.</p>
 
                      <h3 class="__fm_title" id="enroll">Key criteria</h3>
-                     <p style="text-align: justify;" class="future_member-text">PhD in one or
-                          more of biological sciences (plant/animal),
-                          mathematics, statistics, computer science, data analytics, biological engineering
-                          or any related discipline in life sciences is required, along with a strong evidence of
-                         prior productivity and high-impact publications.</p>
+                     <p style="text-align: justify;" class="future_member-text">A PhD in one or
+                          more biological sciences (plant/animal),
+                          mathematics, statistics, computer science, data analytics, biological engineering,
+                          or any related discipline in life sciences is required, along with strong evidence of
+                          prior productivity and high-impact publications.</p>
                   </div>
                    <div class = "col-sm-8" id="scroll_contact_form">
                   <form id="contact-form" class="form-future_memb" action="assets/api/sendmail.php" method="post">
